<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.mainactivity.MainActivity">

    <EditText
        android:id="@+id/edit_abbreviation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_valid_abbrev"
        android:inputType="textCapCharacters"
        android:maxLines="1"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/no_result_found"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_acronym"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />

</LinearLayout>